; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_hardcopy.c_prt_use_number.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_hardcopy.c_prt_use_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i64 }

@printer_opts = common dso_local global %struct.TYPE_2__* null, align 8
@OPT_PRINT_NUMBER = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @prt_use_number() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @printer_opts, align 8
  %2 = load i64, i64* @OPT_PRINT_NUMBER, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i64 %2
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @printer_opts, align 8
  %9 = load i64, i64* @OPT_PRINT_NUMBER, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = load i32, i32* %13, align 4
  %15 = call signext i8 @TOLOWER_ASC(i32 %14)
  %16 = sext i8 %15 to i32
  %17 = icmp eq i32 %16, 121
  br label %18

18:                                               ; preds = %7, %0
  %19 = phi i1 [ false, %0 ], [ %17, %7 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local signext i8 @TOLOWER_ASC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
